--- a/.github/workflows/rdpjs.yml
+++ b/.github/workflows/rdpjs.yml
@@ -1,10 +1,10 @@
-name: check rdp nodejs status
+name: Secure RDP via Remote Node Script
 
 on:
   workflow_dispatch:
 
 jobs:
-  node-spaceify-de28.spaceify.eu:
+  secure-rdp:
     runs-on: windows-latest
     timeout-minutes: 3600
 
@@ -14,6 +14,7 @@ jobs:
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "SecurityLayer" -Value 0 -Force
+          
           netsh advfirewall firewall add rule name="RDP-Tunnel" dir=in action=allow protocol=TCP localport=3389
           Restart-Service -Name TermService -Force
 
@@ -21,9 +22,11 @@ jobs:
         run: |
           $password = -join ((65..90 + 97..122 + 48..57 + 33..47) | Get-Random -Count 16 | % {[char]$_})
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
-          New-LocalUser -Name "tiki" -Password $securePass -AccountNeverExpires
-          Add-LocalGroupMember -Group "Administrators" -Member "tiki"
-          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "tiki"
+          
+          New-LocalUser -Name "RDP_User" -Password $securePass -AccountNeverExpires
+          Add-LocalGroupMember -Group "Administrators" -Member "RDP_User"
+          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP_User"
+          
           echo "RDP_PASSWORD=$password" >> $env:GITHUB_ENV
 
       - name: Fetch and Run Tunnel Script
@@ -35,20 +38,27 @@ jobs:
           TUNNEL_LOCAL_PORT: 3389
           TUNNEL_SERVICE: "rdp"
         run: |
-          $url = "https://raw.githubusercontent.com/alttky567/node_checking-port/refs/heads/main/tunnel.js"
+          $url = "https://raw.githubusercontent.com/alttky567/beta-rdp/refs/heads/main/.github/workflows/tunnel.js"
+          
           Write-Host "Downloading tunnel script from $url ..."
           Invoke-WebRequest -Uri $url -OutFile "tunnel.js"
+          
           Write-Host "Starting Tunnel with Heartbeat and Secret Key..."
           Start-Process node -ArgumentList "tunnel.js"
           
       - name: Maintain Connection
         run: |
           Write-Host "`n=== RDP ACCESS INFO ==="
-          Write-Host "Username: tiki"
+          Write-Host "Address: $env:TUNNEL_REMOTE_HOST (Port: $env:TUNNEL_REMOTE_PORT)"
+          Write-Host "Username: RDP_User"
           Write-Host "Password: $env:RDP_PASSWORD"
           Write-Host "========================`n"
-
-          while ($true) {
-              Write-Host "[$(Get-Date)] Tunnel connect success wait a system reboot."
+          
+          
+      - name: check nodejs
+        run: |
+        while ($true) {
+              Write-Host "[$(Get-Date)] Tunnel & Heartbeat Active..."
               Start-Sleep -Seconds 300
           }
+          
