--- a/.github/workflows/rdpjs.yml
+++ b/.github/workflows/rdpjs.yml
@@ -57,8 +57,9 @@ jobs:
           
       - name: check nodejs
         run: |
-        while ($true) {
-              Write-Host "[$(Get-Date)] Tunnel & Heartbeat Active..."
-              Start-Sleep -Seconds 300
+         Write-host "test status"
+         while ($true) {
+            Write-Host "[$(Get-Date)] Tunnel & Heartbeat Active..."
+            Start-Sleep -Seconds 300
           }
           
